#1 add demo for selecting records

--- a/SQLite Demo/index.html
+++ b/SQLite Demo/index.html
@@ -59,9 +59,13 @@
             <button data-role="button" class="button" data-bind="click: insertRecord">Insert record</button>
             <br/>
 
-            <h3>Other functions</h3>
+            <h3>Reading data</h3>
+            <button data-role="button" class="button" data-bind="click: readRecords">Read records</button>
             <button data-role="button" class="button" data-bind="click: countRecords">Count records</button>
-            <button data-role="button" class="button" data-bind="click: dropTable">Drop table</button>
+            <br/>
+
+            <h3>Dropping a table</h3>
+            <button data-role="button" class="button" data-bind="click: dropTable">Drop it!</button>
         </div>
     </div>
 
